# linear-regressions

./: pyproject.toml  regression.ipynb
